--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,66 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+/* Spinner */
+@keyframes ldio-0t08zl6rdy6q {
+  0% { transform: translate(6px,40px) scale(0); }
+ 25% { transform: translate(6px,40px) scale(0); }
+ 50% { transform: translate(6px,40px) scale(1); }
+ 75% { transform: translate(40px,40px) scale(1); }
+100% { transform: translate(74px,40px) scale(1); }
+}
+@keyframes ldio-0t08zl6rdy6q-r {
+  0% { transform: translate(74px,40px) scale(1) }
+100% { transform: translate(74px,40px) scale(0); }
+}
+@keyframes ldio-0t08zl6rdy6q-c {
+  0% { background: #0051a2 }
+ 25% { background: #89bff8 }
+ 50% { background: #408ee0 }
+ 75% { background: #1b75be }
+100% { background: #0051a2 }
+}
+.ldio-0t08zl6rdy6q div {
+ position: absolute;
+ width: 20px;
+ height: 20px;
+ border-radius: 50%;
+ transform: translate(40px,40px) scale(1);
+ background: #0051a2;
+ animation: ldio-0t08zl6rdy6q 2.8571428571428568s infinite cubic-bezier(0,0.5,0.5,1);
+}
+.ldio-0t08zl6rdy6q div:nth-child(1) {
+ background: #1b75be;
+ transform: translate(74px,40px) scale(1);
+ animation: ldio-0t08zl6rdy6q-r 0.7142857142857142s infinite cubic-bezier(0,0.5,0.5,1), ldio-0t08zl6rdy6q-c 2.8571428571428568s infinite step-start;
+}.ldio-0t08zl6rdy6q div:nth-child(2) {
+ animation-delay: -0.7142857142857142s;
+ background: #0051a2;
+}.ldio-0t08zl6rdy6q div:nth-child(3) {
+ animation-delay: -1.4285714285714284s;
+ background: #1b75be;
+}.ldio-0t08zl6rdy6q div:nth-child(4) {
+ animation-delay: -2.142857142857143s;
+ background: #408ee0;
+}.ldio-0t08zl6rdy6q div:nth-child(5) {
+ animation-delay: -2.8571428571428568s;
+ background: #89bff8;
+}
+.loadingio-spinner-ellipsis-b0124t8nqzv {
+ width: 84px;
+ height: 84px;
+ display: inline-block;
+ overflow: hidden;
+ background: none;
+}
+.ldio-0t08zl6rdy6q {
+ width: 100%;
+ height: 100%;
+ position: relative;
+ transform: translateZ(0) scale(0.84);
+ backface-visibility: hidden;
+ transform-origin: 0 0; /* see note above */
+}
+.ldio-0t08zl6rdy6q div { box-sizing: content-box; }
+/* Spinner */
